Completed EHR for patient and provider

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5001
-OPENMRS_FHIR_BASE='http://localhost:8081/openmrs/ws/fhir2/R4';
+OPENMRS_FHIR_BASE=http://localhost:8081/openmrs-standalone/ws/rest/v1
 OPENMRS_USERNAME=admin
 OPENMRS_PASSWORD=Admin123
